infra/dashy/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashy
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: dashy.wavecat.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foundry
            port:
              name: http
  tls:
  - hosts:
    - dashy.wavecat.net
    secretName: dashy.wavecat.net
